Actualiación para ultima evaluación